- Fixed bug #60455: stream_get_line misbehaves if EOF is not detected together   with the last read.